# cpuminer-ncpool

./: .gitignore  CMakeLists.txt  Dockerfile  NEWS  README.md  configure.ac  cpu-miner.c  cpuminer.nsi  cpuminer.vcxproj  run-franc.sh  run-kyf.sh  run.sh  util.c
api/: index.php
compat/: cpuminer-config.h
compat/bionic/: cpuminer-config.h
distribution/linux-x64/: readme.txt  run.sh
distribution/windows-x64/: lisezmoi.txt  run.bat
res/: cpuminer.rc  resource.h
