cmake_minimum_required(VERSION 3.12)
project(cpuminer_ncpool)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(compat)
include_directories(compat/bionic)
include_directories(compat/curl-for-windows)
include_directories(compat/curl-for-windows/curl)
include_directories(compat/curl-for-windows/curl/include)
include_directories(compat/curl-for-windows/curl/include/curl)
include_directories(compat/curl-for-windows/openssl)
include_directories(compat/curl-for-windows/openssl/config)
include_directories(compat/curl-for-windows/openssl/openssl)
include_directories(compat/curl-for-windows/openssl/openssl/crypto)
include_directories(compat/curl-for-windows/openssl/openssl/crypto/sha)
include_directories(compat/curl-for-windows/openssl/openssl/include)
include_directories(compat/curl-for-windows/openssl/openssl/include/openssl)
include_directories(compat/curl-for-windows/zlib)
include_directories(compat/getopt)
include_directories(compat/jansson)
include_directories(compat/pthreads)
include_directories(compat/sys)
include_directories(crypto)
include_directories(lyra2)
include_directories(res)
include_directories(scryptjane)
include_directories(sha3)
include_directories(yescrypt)

add_executable(cpuminer_ncpool
        algo/allium.c
        algo/axiom.c
        algo/bastion.c
        algo/bitcore.c
        algo/blake.c
        algo/blake2.c
        algo/blake2b.c
        algo/blakecoin.c
        algo/bmw256.c
        algo/c11.c
        algo/cryptolight.c
        algo/cryptonight.c
        algo/decred.c
        algo/drop.c
        algo/fresh.c
        algo/geek.c
        algo/groestl.c
        algo/heavy.c
        algo/ink.c
        algo/jha.c
        algo/keccak.c
        algo/lbry.c
        algo/luffa.c
        algo/lyra2re.c
        algo/lyra2rev2.c
        algo/lyra2v3.c
        algo/myr-groestl.c
        algo/neoscrypt.c
        algo/nist5.c
        algo/pentablake.c
        algo/phi1612.c
        algo/phi2.c
        algo/pluck.c
        algo/quark.c
        algo/qubit.c
        algo/rainforest.c
        algo/s3.c
        algo/scrypt-jane.c
        algo/scrypt.c
        algo/sha2.c
        algo/sia.c
        algo/sibcoin.c
        algo/skein.c
        algo/skein2.c
        algo/sonoa.c
        algo/timetravel.c
        algo/tribus.c
        algo/veltor.c
        algo/x11.c
        algo/x11evo.c
        algo/x12.c
        algo/x13.c
        algo/x14.c
        algo/x15.c
        algo/x16r.c
        algo/x16s.c
        algo/x17.c
        algo/x20r.c
        algo/xevan.c
        algo/yescrypt.c
        algo/zr5.c
        compat/bionic/cpuminer-config.h
        compat/curl-for-windows/curl/include/curl/curl.h
        compat/curl-for-windows/curl/include/curl/curlbuild.h
        compat/curl-for-windows/curl/include/curl/curlrules.h
        compat/curl-for-windows/curl/include/curl/curlver.h
        compat/curl-for-windows/curl/include/curl/easy.h
        compat/curl-for-windows/curl/include/curl/mprintf.h
        compat/curl-for-windows/curl/include/curl/multi.h
        compat/curl-for-windows/curl/include/curl/stdcheaders.h
        compat/curl-for-windows/curl/include/curl/typecheck-gcc.h
        compat/curl-for-windows/openssl/config/opensslconf.h
        compat/curl-for-windows/openssl/openssl/crypto/sha/sha.h
        compat/curl-for-windows/openssl/openssl/crypto/opensslconf.h
        compat/curl-for-windows/openssl/openssl/include/openssl/e_os2.h
        compat/curl-for-windows/openssl/openssl/include/openssl/opensslconf.h
        compat/curl-for-windows/openssl/openssl/include/openssl/sha.h
        compat/curl-for-windows/openssl/openssl/e_os2.h
        compat/curl-for-windows/zlib/zconf.h
        compat/curl-for-windows/zlib/zlib.h
        compat/getopt/getopt.h
        compat/getopt/getopt_long.c
        compat/jansson/config.h
        compat/jansson/dump.c
        compat/jansson/error.c
        compat/jansson/hashtable.c
        compat/jansson/hashtable.h
        compat/jansson/jansson.h
        compat/jansson/jansson_config.h
        compat/jansson/jansson_private.h
        compat/jansson/load.c
        compat/jansson/memory.c
        compat/jansson/pack_unpack.c
        compat/jansson/strbuffer.c
        compat/jansson/strbuffer.h
        compat/jansson/strconv.c
        compat/jansson/utf.c
        compat/jansson/utf.h
        compat/jansson/util.h
        compat/jansson/value.c
        compat/pthreads/pthread.h
        compat/pthreads/sched.h
        compat/sys/time.h
        compat/cpuminer-config.h
        compat/gettimeofday.c
        compat/inttypes.h
        compat/stdbool.h
        compat/unistd.h
        compat/winansi.c
        compat/winansi.h
        crypto/aesb.c
        crypto/blake2b.c
        crypto/blake2b.h
        crypto/blake2s.c
        crypto/blake2s.h
        crypto/c_blake256.c
        crypto/c_blake256.h
        crypto/c_groestl.c
        crypto/c_groestl.h
        crypto/c_jh.c
        crypto/c_jh.h
        crypto/c_keccak.c
        crypto/c_keccak.h
        crypto/c_skein.c
        crypto/c_skein.h
        crypto/groestl_tables.h
        crypto/hash-ops.h
        crypto/hash.c
        crypto/hash.h
        crypto/int-util.h
        crypto/oaes_config.h
        crypto/oaes_lib.c
        crypto/oaes_lib.h
        crypto/skein_port.h
        lyra2/Lyra2.c
        lyra2/Lyra2.h
        lyra2/Sponge.c
        lyra2/Sponge.h
        res/resource.h
        scryptjane/scrypt-conf.h
        scryptjane/scrypt-jane-chacha.h
        scryptjane/scrypt-jane-hash.h
        scryptjane/scrypt-jane-hash_blake256.h
        scryptjane/scrypt-jane-hash_blake512.h
        scryptjane/scrypt-jane-hash_keccak.h
        scryptjane/scrypt-jane-hash_sha256.h
        scryptjane/scrypt-jane-hash_sha512.h
        scryptjane/scrypt-jane-hash_skein512.h
        scryptjane/scrypt-jane-mix_chacha-avx.h
        scryptjane/scrypt-jane-mix_chacha-sse2.h
        scryptjane/scrypt-jane-mix_chacha-ssse3.h
        scryptjane/scrypt-jane-mix_chacha.h
        scryptjane/scrypt-jane-mix_salsa-avx.h
        scryptjane/scrypt-jane-mix_salsa-sse2.h
        scryptjane/scrypt-jane-mix_salsa.h
        scryptjane/scrypt-jane-mix_salsa64-avx.h
        scryptjane/scrypt-jane-mix_salsa64-sse2.h
        scryptjane/scrypt-jane-mix_salsa64-ssse3.h
        scryptjane/scrypt-jane-mix_salsa64.h
        scryptjane/scrypt-jane-pbkdf2.h
        scryptjane/scrypt-jane-portable-x86.h
        scryptjane/scrypt-jane-portable.h
        scryptjane/scrypt-jane-romix-basic.h
        scryptjane/scrypt-jane-romix-template.h
        scryptjane/scrypt-jane-romix.h
        scryptjane/scrypt-jane-salsa.h
        scryptjane/scrypt-jane-salsa64.h
        scryptjane/scrypt-jane-test-vectors.h
        sha3/aes_helper.c
        sha3/gost_streebog.c
        sha3/gost_streebog.h
        sha3/haval_helper.c
        sha3/md_helper.c
        sha3/mod_blakecoin.c
        sha3/sph_blake.c
        sha3/sph_blake.h
        sha3/sph_bmw.c
        sha3/sph_bmw.h
        sha3/sph_cubehash.c
        sha3/sph_cubehash.h
        sha3/sph_echo.c
        sha3/sph_echo.h
        sha3/sph_fugue.c
        sha3/sph_fugue.h
        sha3/sph_groestl.c
        sha3/sph_groestl.h
        sha3/sph_hamsi.c
        sha3/sph_hamsi.h
        sha3/sph_hamsi_helper.c
        sha3/sph_haval.c
        sha3/sph_haval.h
        sha3/sph_hefty1.c
        sha3/sph_hefty1.h
        sha3/sph_jh.c
        sha3/sph_jh.h
        sha3/sph_keccak.c
        sha3/sph_keccak.h
        sha3/sph_luffa.c
        sha3/sph_luffa.h
        sha3/sph_panama.c
        sha3/sph_panama.h
        sha3/sph_radiogatun.c
        sha3/sph_radiogatun.h
        sha3/sph_ripemd.c
        sha3/sph_ripemd.h
        sha3/sph_sha2.c
        sha3/sph_sha2.h
        sha3/sph_sha2big.c
        sha3/sph_shabal.c
        sha3/sph_shabal.h
        sha3/sph_shavite.c
        sha3/sph_shavite.h
        sha3/sph_simd.c
        sha3/sph_simd.h
        sha3/sph_skein.c
        sha3/sph_skein.h
        sha3/sph_types.h
        sha3/sph_whirlpool.c
        sha3/sph_whirlpool.h
        yescrypt/sha256_Y.c
        yescrypt/sha256_Y.h
        yescrypt/sysendian.h
        yescrypt/yescrypt-best.c
        yescrypt/yescrypt-common.c
        yescrypt/yescrypt-opt.c
        yescrypt/yescrypt-platform.h
        yescrypt/yescrypt-simd.c
        yescrypt/yescrypt.h
        api.c
        compat.h
        cpu-miner.c
        cpuminer-config.h
        elist.h
        miner.h
        sysinfos.c
        uint256.cpp
        uint256.h
        util.c)
